Remove Spring Security Implement Create Customer ManyToMany. Re-map RoleMapper and CustomerMapper. Create DateUtils. Create CustomerRoles for ManyToManyTable Refactor CustomerCreationDTO.java and CustomerDto